Task2: PhysSubjectFragment + VideoLectureFragment(Completed)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.SmartPhysicApplication"
         tools:targetApi="31">
         <activity
-            android:name=".WelcomeActivity"
+            android:name=".main.WelcomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".main.MainActivity"
+            android:windowSoftInputMode="adjustNothing"
             android:exported="true">
         </activity>
     </application>
