--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
             android:windowSoftInputMode="adjustNothing"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".main.GamificationActivity"
+            android:windowSoftInputMode="adjustNothing"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
