--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         tools:targetApi="31">
         <activity
             android:name=".main.WelcomeActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,16 +26,20 @@
             android:name=".main.MainActivity"
             android:windowSoftInputMode="adjustResize"
             android:exported="true"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name=".main.GamificationActivity">
+            android:name=".main.GamificationActivity"
+            android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name=".main.ModelViewerNativeActivity">
+            android:name=".main.ModelViewerNativeActivity"
+            android:screenOrientation="landscape">
         </activity>
         <activity
-            android:name=".main.LabDragActivity">
+            android:name=".main.LabDragActivity"
+            android:screenOrientation="landscape">
         </activity>
     </application>
 
